#4. 전통적 방식의 JDBC part1

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,13 @@ dependencies {
 	implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api'
 	implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl'
 
+	// 자바프로그램과 mysql을 연동해주는 커넥터
+	implementation 'mysql:mysql-connector-java:8.0.33'
+
+	// Spring Framework에서 JDBC를 좀 더 쉽게 사용할 수 있게 해주는 라이브러리
+//	implementation 'org.springframework.boot:spring-boot-starter-jdbc:3.2.4'
+
+
 }
 
 tasks.named('test') {
