#5. Spring JDBC를 활용한 성적정보 프로그램 작성 1

--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 	implementation 'mysql:mysql-connector-java:8.0.33'
 
 	// Spring Framework에서 JDBC를 좀 더 쉽게 사용할 수 있게 해주는 라이브러리
-//	implementation 'org.springframework.boot:spring-boot-starter-jdbc:3.2.4'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc:3.2.4'
 
 
 }
