--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,11 @@ server.port=8181
 # jsp view resolver setting
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+# database setting
+# url, username, password, ???? ???: ?????? ??? ?? ??.
+# ???? ??? ?? ??? ??? ?? ??? ? ??? ?? ??? ??.
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_db?serverTimezone=Asia/Seoul
+spring.datasource.username=spring
+spring.datasource.password=spring
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
