--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/spring_db?serverTimezone=Asia/
 spring.datasource.username=spring
 spring.datasource.password=spring
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#mybatis setting
+#src/main/resources -> classpath:
+mybatis.config-location=classpath:mybatis-config.xml
