#23. Spring JDBC 연습 (게시판) 게시판 인가처리 인터셉터 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #mybatis setting
 #src/main/resources -> classpath:
 mybatis.config-location=classpath:mybatis-config.xml
+
+# log level setting
+logging.level.root=info
+logging.level.com.spring.mvc=info
+logging.level.com.spring.mvc.chap05=info
