#31. 공공 데이터 API 사용 방법 (기상청 단기예보)

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,9 @@ dependencies {
 	//스프링 시큐리티 모듈
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
+	// json-simple: 문자열 JSON 데이터를 진짜 JSON으로 변환 및 데이터 취득을 도와주는 라이브러리
+	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+
 }
 
 tasks.named('test') {
