git ignore config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,7 @@ logging.level.com.spring.mvc.chap05=info
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 file.upload.root-path=C:/MyWorkspace/upload/
+
+#sns login property
+sns.kakao.app-key=c69787a4c6854c23fed2c182b9b4f8c3
+sns.kakao.redirect-uri=http://localhost:8181/auth/kakao
